# aoc_2022

./: Cargo.toml  _2.rs  go.mod  main.go
pkg/: first.go  openInputs.go  second.go
src/: _1.rs  _2.rs  _3.rs  _4.rs  _5.rs  main.rs
src/13/: mod.rs
src/_10/: mod.rs
src/_11/: mod.rs
src/_12/: height.rs  mod.rs  step.rs
src/_13/: mod.rs
src/_14/: cave.rs  mod.rs  position.rs
src/_15/: mod.rs
src/_16/: mod.rs
src/_17/: mod.rs
src/_18/: mod.rs
src/_19/: mod.rs
src/_25/: mod.rs
src/_5/: instruction.rs  mod.rs  shipment.rs  stack.rs
src/_6/: mod.rs
src/_7/: mod.rs
src/_8/: mod.rs
src/_9/: mod.rs
