[package]
name = "aoc_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.0"
iterwindows = "0.3.0"
anyhow = "1.0.66"
grid="0.9.0"
nom = "7.1.1"
itertools = "0.10.5"
ndarray = "0.15.6"
sscanf = "0.4.0"
smallvec = "1.10.0"
static_init = "1.0.3"
pretty_assertions = "1.3.0"